Java Stream Basic Questions & Answer